# openmw-vr

./: .gitignore  .gitlab-ci-madsbuvi.yml  .gitlab-ci.yml  .readthedocs.yaml  CMakeLists.txt  README.md
CI/: before_script.msvc.sh  before_script.msvc.sh.orig  install_debian_deps.sh  install_debian_deps.sh.orig
apps/launcher/: advancedpage.cpp  maindialog.cpp
apps/openmw/: CMakeLists.txt  engine.cpp  engine.hpp  engine_vr.cpp  main.cpp  vrengine.cpp
apps/openmw/mwbase/: environment.cpp  environment.hpp  inputmanager.hpp  windowmanager.hpp  world.hpp
apps/openmw/mwclass/: creature.cpp  creature.hpp  npc.cpp  npc.hpp
apps/openmw/mwgui/: alchemywindow.cpp  alchemywindow.hpp  container.cpp  dialogue.cpp  dialogue.hpp  hud.cpp  hud.hpp  inventorywindow.cpp  inventorywindow.hpp  itemwidget.cpp  itemwidget.hpp  keyboardnavigation.cpp  layout.cpp  layout.hpp  loadingscreen.cpp  loadingscreen.hpp  mapwindow.cpp  messagebox.cpp  messagebox.hpp  mode.hpp  quickkeysmenu.cpp  quickkeysmenu.hpp  savegamedialog.cpp  savegamedialog.hpp  settingswindow.cpp  settingswindow.hpp  spellicons.cpp  spellwindow.cpp  statswindow.cpp  statswindow.hpp  tooltips.cpp  tradewindow.cpp  windowbase.cpp  windowbase.hpp  windowmanagerimp.cpp  windowmanagerimp.hpp
apps/openmw/mwinput/: actionmanager.cpp  actionmanager.hpp  actions.hpp  bindingsmanager.cpp  bindingsmanager.hpp  controllermanager.cpp  controllermanager.hpp  inputmanagerimp.cpp  inputmanagerimp.hpp  mousemanager.cpp  mousemanager.hpp
apps/openmw/mwlua/: camerabindings.cpp  luamanagerimp.cpp  vrbindings.cpp
apps/openmw/mwmechanics/: character.cpp  combat.cpp
apps/openmw/mwphysics/: movementsolver.cpp  mtphysics.cpp  physicssystem.cpp
apps/openmw/mwrender/: actoranimation.cpp  actoranimation.hpp  animation.cpp  animation.hpp  camera.cpp  camera.hpp  characterpreview.cpp  characterpreview.hpp  globalmap.cpp  globalmap.hpp  localmap.cpp  localmap.hpp  npcanimation.cpp  npcanimation.hpp  pingpongcanvas.cpp  pingpongcanvas.hpp  pingpongcull.cpp  postprocessor.cpp  postprocessor.hpp  renderingmanager.cpp  renderingmanager.hpp  screenshotmanager.cpp  screenshotmanager.hpp  sky.cpp  skyutil.cpp  transparentpass.cpp  util.cpp  util.hpp  vismask.hpp  water.cpp  water.hpp  weaponanimation.cpp
apps/openmw/mwvr/: openxraction.cpp  openxraction.hpp  openxractionset.cpp  openxractionset.hpp  openxranimation.cpp  openxranimation.hpp  openxrdebug.cpp  openxrengine.cpp  openxrengine.hpp  openxrenvironment.cpp  openxrenvironment.hpp  openxrinput.cpp  openxrinput.hpp  openxrinputmanager.cpp  openxrinputmanager.hpp  openxrlayer.cpp  openxrlayer.hpp  openxrmanager.cpp  openxrmanager.hpp  openxrmanagerimpl.cpp  openxrmanagerimpl.hpp  openxrmenu.cpp  openxrmenu.hpp  openxrplatform.cpp  openxrplatform.hpp  openxrsession.cpp  openxrsession.hpp  openxrswapchain.cpp  openxrswapchain.hpp  openxrswapchainimage.cpp  openxrswapchainimage.hpp  openxrswapchainimpl.cpp  openxrswapchainimpl.hpp  openxrtexture.cpp  openxrtexture.hpp  openxrtracker.cpp  openxrtracker.hpp  openxrtypeconversions.cpp  openxrview.cpp  openxrview.hpp  (+47 more)
apps/openmw/mwworld/: cellstore.cpp  class.cpp  class.hpp  player.cpp  player.hpp  projectilemanager.cpp  worldimp.cpp  worldimp.hpp
cmake/: FindOpenXR.cmake  OpenMWMacros.cmake
components/: CMakeLists.txt
components/debug/: gldebug.cpp
components/lua_ui/: widget.cpp  widget.hpp
components/misc/: callbackmanager.cpp  callbackmanager.hpp  notnullptr.hpp  stereo.cpp  stereo.hpp  stringops.hpp
components/myguiplatform/: myguiplatform.cpp  myguiplatform.hpp  myguirendermanager.cpp  myguirendermanager.hpp  myguitexture.cpp  myguitexture.hpp  scalinglayer.hpp
components/resource/: scenemanager.cpp
components/sceneutil/: color.cpp  color.hpp  depth.cpp  depth.hpp  lightmanager.cpp  lightmanager.hpp  mwshadowtechnique.cpp  mwshadowtechnique.hpp  riggeometry.cpp  rtt.cpp  rtt.hpp  shadow.cpp  skeleton.cpp  skeleton.hpp  statesetupdater.cpp  statesetupdater.hpp  visitor.hpp
components/sdlutil/: sdlgraphicswindow.cpp  sdlgraphicswindow.hpp  sdlinputwrapper.cpp  sdlvideowrapper.cpp  sdlvideowrapper.hpp
components/settings/: settings.cpp  settings.hpp
components/shader/: shadermanager.cpp  shadermanager.hpp  shadervisitor.cpp  shadervisitor.hpp
components/stereo/: multiview.cpp  multiview.hpp  stereomanager.cpp  stereomanager.hpp  types.cpp  types.hpp
components/terrain/: material.cpp
components/vr/: constants.hpp  directx.cpp  directx.hpp  frame.cpp  frame.hpp  layer.cpp  layer.hpp  rendertoswapchain.cpp  rendertoswapchain.hpp  session.cpp  session.hpp  swapchain.cpp  swapchain.hpp  trackinglistener.hpp  trackingmanager.cpp  trackingmanager.hpp  trackingpath.cpp  trackingpath.hpp  trackingsource.cpp  trackingsource.hpp  trackingtransform.cpp  trackingtransform.hpp  view.hpp  viewer.cpp  viewer.hpp  vr.cpp  vr.hpp
components/widgets/: box.cpp  box.hpp  numericeditbox.hpp  virtualkeyboardmanager.cpp  virtualkeyboardmanager.hpp
components/xr/: action.cpp  action.hpp  actionset.cpp  actionset.hpp  debug.cpp  debug.hpp  extensions.cpp  extensions.hpp  input.cpp  input.hpp  instance.cpp  instance.hpp  platform.cpp  platform.hpp  session.cpp  session.hpp  swapchain.cpp  swapchain.hpp  tracking.cpp  tracking.hpp  typeconversion.cpp  typeconversion.hpp
docs/source/: conf.py
files/: settings-default.cfg  settings-overrides-vr.cfg  xrcontrollersuggestions.xml
files/data/: CMakeLists.txt
files/mygui/: CMakeLists.txt  openmw_hud_vr.layout  openmw_layers_vr.xml  openmw_savegame_dialog.layout  openmw_settings_window_vr.layout  openmw_vr_metamenu.layout
files/shaders/: 3dgui_fragment.glsl  3dgui_vertex.glsl  CMakeLists.txt  groundcover_fragment.glsl  groundcover_vertex.glsl  gui_fragment.glsl  interface_util.glsl  multiview_fragment.glsl  multiview_vertex.glsl  nv_default_fragment.glsl  nv_default_vertex.glsl  nv_nolighting_fragment.glsl  nv_nolighting_vertex.glsl  objects_fragment.glsl  objects_geometry.glsl  objects_vertex.glsl  sky_fragment.glsl  sky_vertex.glsl  terrain_fragment.glsl  terrain_geometry.glsl  terrain_vertex.glsl  (+2 more)
(+11 files in other folders)
